force-app/main/default/objects/Inner_Chat_Session__c/Inner_Chat_Session__c.object-meta.xml
<CustomObject>
    <label>Chat Session</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>