force-app/main/default/objects/Inner_Chat_Session__c/fields/Active_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Message_Count__c</fullName>
    <label>Active Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>