force-app/main/default/objects/Inner_Chat_Session__c/fields/Archive_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Archive_Storage_Type__c</fullName>
    <label>Archive Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>BigObject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>