force-app/main/default/objects/Inner_Chat_Session__c/fields/Last_Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Archive_Date__c</fullName>
    <label>Last Archive Date</label>
    <type>DateTime</type>
</CustomField>