force-app/main/default/objects/Inner_Chat_Session__c/fields/Last_Message_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Message At</label>
    <type>DateTime</type>
</CustomField>